configure dependencies for GUI tests and implement SegmentBox GUI tests